# trader-quickstart

./: .gitignore  .project  Makefile  README.md  agent_pkey.txt  alpine_chiado.env  alpine_gnosis_test.env  alpine_test.env  analyse_agent_logs.py  analyse_logs.py  analyse_logs.sh  claim_olas.sh  claim_staking_rewards.sh  config.json  flake.nix  foo.txt  local_run_service.sh  main_run_service.sh  operator_pkey.txt  pyproject.toml  rank_traders.py  report.py  requirements.txt  reset_password.sh  reset_staking.sh  run_service.py  run_service.sh  run_service_staking.sh  sample.env  setup.sh  stop_service.py  stop_service.sh  supervisord.conf  terminate_on_chain_service.sh  test.sh  trades.py
.trader_runner.138/: agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
.trader_runner126/: agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
.trader_runner128/: agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
.trader_runner132/: README.txt  agent_address.txt  keys.json  operator_keys.json
.trader_runner133/: agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
.trader_runner146/: agent_address.txt  keys.json  operator_keys.json  rpc.txt
.trader_runner147/: agent_address.txt  keys.json  operator_keys.json
.trader_runner148/: agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
.trader_runner66/: agent_address.txt  keys.json  operator_keys.json  rpc.txt  service_safe_address.txt
.trader_runner88/: README.txt  agent_address.txt  keys.json  operator_keys.json  service_safe_address.txt
configs/: config_mech.json  config_memeooorr.json  config_modius.json  config_optimus.json  config_predict_trader.json
contracts/: AgentMech.json  ServiceRegistryTokenUtility.json  registry_abi.txt
scripts/: __init__.py  alpine_chiado.env  alpine_gnosis_test.env  approval.py  change_keys_json_password.py  change_safe_ownership copy.py  change_safe_ownership2.py  change_safe_ownership_OLD.py  check_python.py  choose_staking.py  claim.py  erc20_balance.py  (+15 more)
(+11 files in other folders)
