[tool.poetry]
name = "quickstart"
version = "0.1.0"
description = "A quickstart for the OLAS agents"
authors = ["David Vilela <dvilelaf@gmail.com>", "Viraj Patel <vptl185@gmail.com>", "Ojuswi Rastogi <ojuswimail@gmail.com>"]
readme = "README.md"
package-mode = false
packages = []
include = []

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
olas-operate-middleware = { git = "https://github.com/valory-xyz/olas-operate-app.git", rev = "5de9dcf85b422f90554236a458510938b1029a86"}
tqdm = "^4.67.1"

[tool.poetry.group.dev.dependencies]
pexpect = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
